<resources>
    <string name="app_name">Attraction</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="policy"><a href="http://project3908066.tilda.ws/">Политика конфиденциальности</a></string>
    <string name="exit">Выход</string>
    <string name="textcontinue">Продолжить</string>
    <string name="close">Закрыть</string>
    <string name="button1">Достопримечательности</string>
    <string name="quiz">Викторина</string>
    <string name="title_name">Моя земля приднепровье</string>
    <string name="title_name_app">Моя земля</string>
    <string name="kratk_info">Краткая информация</string>
    <string name="legend">Легенда</string>

    <string name="attraction_1">Могилёвская ратуша</string>
    <string name="attraction_1_kr">тут должны быть краткая информация</string>
    <string name="attraction_1_leg">тут должна быть легенда</string>

    <string name="quiz_submit">Подтвердить</string>
    <string name="questions">Вопросы</string>
    <string name="quiz_btn_1">Ответ 1</string>
    <string name="quiz_btn_2">Ответ 2</string>
    <string name="quiz_btn_3">Ответ 3</string>
    <string name="quiz_btn_4">Ответ 4</string>
    <string name="total_questions">Всего вопросов: </string>
</resources>