<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="517dp"
        android:layout_height="238dp"
        app:srcCompat="@drawable/ratusha"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="-6dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="374dp"
        android:layout_height="75dp"
        android:text="@string/attraction_1_kr"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="328dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="261dp"
        android:text="@string/attraction_1_leg"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kratk_info"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="61dp"
        android:layout_height="26dp"
        android:text="@string/legend"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="381dp"
        android:layout_height="22dp"
        android:text="@string/attraction_1"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="248dp" />
</androidx.constraintlayout.widget.ConstraintLayout>