<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_one"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_back"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/btn_back"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/total_question"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_questions"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/questions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ans_A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ans_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quiz_btn_1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ans_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ans_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quiz_btn_2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ans_C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ans_C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quiz_btn_3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ans_D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ans_D"
        android:layout_width="347dp"
        android:layout_height="47dp"
        android:layout_marginBottom="160dp"
        android:text="@string/quiz_btn_4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="307dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_bg"
        android:text="@string/quiz_submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>